terraform/subnet.tf
resource "aws_subnet" "vayola_pub" {
  vpc_id                  = aws_vpc.vayola.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "vayola_pub"
  }
}

resource "aws_subnet" "vayola_priv" {
  vpc_id     = aws_vpc.vayola.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "vayola_priv"
  }
}
